...
    <string name="headline_daily_goals">Daily goals</string>
    <string name="headline_general">General</string>
    <string name="headline_macronutrients">Macronutrients</string>
    <string name="headline_meals">Meals</string>
    <string name="headline_copy_meal">Copy meal</string>
    <string name="headline_delete_food">Delete food</string>
    <string name="headline_edit_product">Edit product</string>
    <string name="headline_permission_required">Permission required</string>
    <string name="headline_language">Language</string>
    <string name="headline_system">System</string>
    <string name="headline_system_language_settings">System language settings</string>
    <string name="headline_secure_screen">Secure screen</string>
    <string name="headline_allow_future_dates">Allow future dates</string>
...
    <string name="action_scan_barcode">Scan barcode</string>
    <string name="action_add">Add</string>
    <string name="action_go_back">Go back</string>
    <string name="action_tap_to_allow_access">Tap to allow access</string>
    <string name="action_create">Create</string>
    <string name="action_clear">Clear</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_go_to_settings">Go to settings</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_add_meal">Add meal</string>
    <string name="action_edit">Edit</string>
    <string name="action_insert_suggested_search">Insert suggested search</string>
    <string name="action_edit_entry">Edit entry</string>
    <string name="action_delete_entry">Delete entry</string>
    <string name="action_close">Close</string>
    <string name="action_discard">Discard</string>
    <string name="action_translate">Translate</string>
    <string name="action_enable_camera_flash">Enable camera flash</string>
    <string name="action_disable_camera_flash">Disable camera flash</string>
    <string name="action_prevent_screen_capture">Prevent screen capture</string>
...
    <string name="action_obtain_key">Obtain key</string>
    <string name="action_dont_show_again">Don't show again</string>

    <string name="neutral_barcode_scanner_camera_request">Allow access to your camera to scan barcodes</string>
    <string name="neutral_barcode_scanner_camera_request_rationale">You must allow access in order to scan barcodes</string>
    <string name="neutral_barcode_scanner_camera_request_redirect_to_settings">Camera permission is required to scan barcodes. Please allow it in the app settings.</string>
    <string name="neutral_no_food_found">No food found</string>
    <string name="neutral_of_target" description="e.g. of 90 g">of %1$s</string>
    <plurals name="neutral_remaining_calories">
        <item quantity="one">%1$d calorie left</item>
        <item quantity="other">%1$d calories left</item>
    </plurals>
    <plurals name="neutral_remaining_kilojoules">
...
